--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "localMySqlConnection": "Server=localhost;port=3306;Database=FastAndFurious;Uid=root;Pwd=password;"
+  }
 }
